--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,8 @@ dependencies {
   testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
 }
 
+uploadArchives {
+  repositories {
+    mavenLocal()
+  }
+}
