--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
   testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
 }
 
+apply plugin: 'maven'
+
 uploadArchives {
   repositories {
     mavenLocal()
